--- a/Datengenerator/Datengenerator/Datengenerator.csproj
+++ b/Datengenerator/Datengenerator/Datengenerator.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Kern\Feld.cs" />
     <Compile Include="Kern\Feldart.cs" />
     <Compile Include="Kern\Feldeigenschaft.cs" />
+    <Compile Include="Kern\FeldEnum.cs" />
     <Compile Include="Kern\FeldKonstant.cs" />
     <Compile Include="Kern\Zeile.cs" />
     <Compile Include="Konfig\Konfig.cs" />
