--- a/Datengenerator/Datengenerator/Datengenerator.csproj
+++ b/Datengenerator/Datengenerator/Datengenerator.csproj
@@ -49,7 +49,10 @@
     <Compile Include="Kern\Feldeigenschaft.cs" />
     <Compile Include="Kern\FeldEnum.cs" />
     <Compile Include="Kern\FeldHash.cs" />
+    <Compile Include="Kern\FeldIK.cs" />
     <Compile Include="Kern\FeldKonstant.cs" />
+    <Compile Include="Kern\Schlüsselverzeichnis.cs" />
+    <Compile Include="Kern\Schlüsselverzeichnismanager.cs" />
     <Compile Include="Kern\Zeile.cs" />
     <Compile Include="Konfig\Konfig.cs" />
     <Compile Include="Loggen\Logger.cs" />
@@ -60,6 +63,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="Datengenerator.konfig">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="IK_Anlage_3.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="XML-Testdateien\ASV.xsd">
