--- a/Datengenerator/Datengenerator/Datengenerator.csproj
+++ b/Datengenerator/Datengenerator/Datengenerator.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Kern\FeldIK.cs" />
     <Compile Include="Kern\FeldKonstant.cs" />
     <Compile Include="Kern\FeldKV.cs" />
+    <Compile Include="Kern\FeldPLZ.cs" />
     <Compile Include="Kern\Schlüsselverzeichnis.cs" />
     <Compile Include="Kern\Schlüsselverzeichnismanager.cs" />
     <Compile Include="Kern\Zeile.cs" />
