--- a/Datengenerator/Datengenerator/Datengenerator.csproj
+++ b/Datengenerator/Datengenerator/Datengenerator.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Kern\Feldart.cs" />
     <Compile Include="Kern\Feldeigenschaft.cs" />
     <Compile Include="Kern\FeldEnum.cs" />
+    <Compile Include="Kern\FeldFGCode.cs" />
     <Compile Include="Kern\FeldHash.cs" />
     <Compile Include="Kern\FeldICD.cs" />
     <Compile Include="Kern\FeldIK.cs" />
@@ -69,6 +70,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="Datengenerator.konfig">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="XML-Testdateien\FGCode.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="XML-Testdateien\ICD.csv">
