--- a/Datengenerator/Datengenerator/Datengenerator.csproj
+++ b/Datengenerator/Datengenerator/Datengenerator.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Kern\Feldeigenschaft.cs" />
     <Compile Include="Kern\FeldEnum.cs" />
     <Compile Include="Kern\FeldFGCode.cs" />
+    <Compile Include="Kern\FeldGanzzahl.cs" />
     <Compile Include="Kern\FeldGOP.cs" />
     <Compile Include="Kern\FeldHash.cs" />
     <Compile Include="Kern\FeldICD.cs" />
