--- a/Datengenerator/Datengenerator/Datengenerator.csproj
+++ b/Datengenerator/Datengenerator/Datengenerator.csproj
@@ -44,23 +44,23 @@
   <ItemGroup>
     <Compile Include="Datengenerator.cs" />
     <Compile Include="Kern\Datei.cs" />
-    <Compile Include="Kern\Feld.cs" />
-    <Compile Include="Kern\Feldart.cs" />
-    <Compile Include="Kern\Feldeigenschaft.cs" />
-    <Compile Include="Kern\FeldEnum.cs" />
-    <Compile Include="Kern\FeldFGCode.cs" />
-    <Compile Include="Kern\FeldFreitext.cs" />
-    <Compile Include="Kern\FeldGanzzahl.cs" />
-    <Compile Include="Kern\FeldGebrZahl.cs" />
-    <Compile Include="Kern\FeldGOP.cs" />
-    <Compile Include="Kern\FeldHash.cs" />
-    <Compile Include="Kern\FeldICD.cs" />
-    <Compile Include="Kern\FeldIK.cs" />
-    <Compile Include="Kern\FeldKalTag.cs" />
-    <Compile Include="Kern\FeldKonstant.cs" />
-    <Compile Include="Kern\FeldKV.cs" />
-    <Compile Include="Kern\FeldPLZ.cs" />
-    <Compile Include="Kern\FeldVsTage.cs" />
+    <Compile Include="Kern\Feldtypen\Feld.cs" />
+    <Compile Include="Kern\Feldtypen\Feldart.cs" />
+    <Compile Include="Kern\Feldtypen\Feldeigenschaft.cs" />
+    <Compile Include="Kern\Feldtypen\FeldEnum.cs" />
+    <Compile Include="Kern\Feldtypen\FeldFGCode.cs" />
+    <Compile Include="Kern\Feldtypen\FeldFreitext.cs" />
+    <Compile Include="Kern\Feldtypen\FeldGanzzahl.cs" />
+    <Compile Include="Kern\Feldtypen\FeldGebrZahl.cs" />
+    <Compile Include="Kern\Feldtypen\FeldGOP.cs" />
+    <Compile Include="Kern\Feldtypen\FeldHash.cs" />
+    <Compile Include="Kern\Feldtypen\FeldICD.cs" />
+    <Compile Include="Kern\Feldtypen\FeldIK.cs" />
+    <Compile Include="Kern\Feldtypen\FeldKalTag.cs" />
+    <Compile Include="Kern\Feldtypen\FeldKonstant.cs" />
+    <Compile Include="Kern\Feldtypen\FeldKV.cs" />
+    <Compile Include="Kern\Feldtypen\FeldPLZ.cs" />
+    <Compile Include="Kern\Feldtypen\FeldVsTage.cs" />
     <Compile Include="Kern\RandomProportional.cs" />
     <Compile Include="Kern\Schlüsselverzeichnis.cs" />
     <Compile Include="Kern\Schlüsselverzeichnismanager.cs" />
