PLZ-Stammtabelle als Datengrundlage statt zufällige Generierung. Closes #75.

--- a/Datengenerator/Datengenerator/Datengenerator.csproj
+++ b/Datengenerator/Datengenerator/Datengenerator.csproj
@@ -96,6 +96,9 @@
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="XML-Testdateien\PLZ.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="XML-Testdateien\ASV.xml">
